# llm-health-agent-starter

./: .env.example  .gitignore  BRING_YOUR_OWN_DATA.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  EXTENDING.md  LICENSE  Makefile  README.md  RESPONSIBLE_USE.md  ROADMAP.md  SACI_SCAFFOLD.md  SETUP.md  environment.yml  install.ps1  install.sh  pyproject.toml  requirements-live.txt  requirements.txt
.binder/: postBuild  requirements.txt
.devcontainer/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
data/: DATA_CARD.md  MANIFEST.sha256  README.md  codebook.csv  generate_dataset.py
data/adapters/: adapter_template.py  example_tidy_csv.py
data/golden/: README.md  (+2 more)
docs/: cookbook.md
ha_workshop/: __init__.py  agent_config.py  student_tools.py
healthagent/: __init__.py  catalog.py  config.py  data.py  verify.py
notebooks/: 00_preflight.ipynb  02_setting_up.ipynb  03_designing_tools.ipynb  04_wiring_the_agent.ipynb  05_eval_safety.ipynb
scripts/: build_offline_pack.sh
templates/: design_map.md  eval_safety_checklist.md
tests/: conftest.py  test_agent_scripted.py  test_catalog.py  test_cli.py  test_client_factory.py  test_completion_loop.py  test_config_datadir.py  test_data_pattern.py  test_evidence.py  test_grounding.py  test_install.py  test_live_policy.py  test_live_smoke.py  test_loop_legible.py  test_notebooks.py  test_persistence.py  test_provider_contract.py  test_registry.py  test_tools.py  test_verify.py  test_workshop_flow.py
(+45 files in other folders)
