[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "healthagent"
version = "0.1.0"
description = "Hands-on tutorial scaffold: prototype a personal LLM health agent over multimodal sensing data (UbiComp/ISWC 2026)."
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = { text = "MIT" }
authors = [
  { name = "Zhihan Jiang" },
  { name = "Will Ke Wang" },
  { name = "Blue (Georgianna) Lin" },
  { name = "Brenna Li" },
  { name = "Xuhai \"Orson\" Xu" },
]
dependencies = [
  "pandas==2.2.3",
  "numpy==2.1.3",
  "matplotlib==3.9.2",
  "pyarrow==18.1.0",
  "python-dotenv==1.0.1",
  "tabulate==0.9.0",
]

[project.optional-dependencies]
notebooks = ["jupyterlab==4.3.4", "ipykernel==6.29.5", "nbconvert==7.16.4"]
dev = ["pytest==8.3.4", "nbconvert==7.16.4", "ruff==0.8.4"]
openai = ["openai==1.57.4"]
gemini = ["google-genai==0.3.0"]
ollama = ["ollama==0.4.4"]

[project.scripts]
ha-check = "healthagent.verify:main"

[tool.setuptools]
packages = ["healthagent", "healthagent.llm", "healthagent.tools", "healthagent.agent", "healthagent.safety"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"
# Notebooks use teaching-friendly idioms (top-of-cell `import os, sys`, semicolons); lint Python
# source only. `ruff check .` is clean with this exclude.
extend-exclude = ["notebooks", "*.ipynb"]
